css/styles.css
/* This makes sure the results are hidden */
#python {
  display: none;
}
#go {
  display: none;
}
#javascript {
  display: none;
}
#cobol {
  display: none;
} 

/* Additional Page Styling*/
body {
  background-color: #0B090A;
  color: #D3D3D3;
}
body p {
  color: #E5383B;
}

/* Styling for the questions section */
#questions {
  background-color: #161A1D;
}

#questions h3 {
  color: #A4161A;
}

#questions h3::before {
  content: "\a";
  white-space: pre;
}
#quiz {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

/* Styling for results */

#results {
  background-color: #161A1D;
  width: 60%;
  height: 300px;
  margin-left: auto;
  margin-right: auto;
}

#results h2 {
  text-align: center;
  color: #660708;
}

#results h3 {
  color: #EF233C;
}

#results img {
  width: 300px;
  height: auto;
  float: left;
}

